Closed Bug 1965931 Opened 6 months ago Closed 6 months ago

Assertion failure: mType == SetTarget, at dom/media/webaudio/AudioEventTimeline.h:

Categories

(Core :: Web Audio, defect)

defect

Tracking

()

RESOLVED FIXED
140 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox-esr128 --- wontfix
firefox138 --- wontfix
firefox139 --- wontfix
firefox140 --- fixed

People

(Reporter: karlt, Assigned: karlt)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Summary: Assertion failure: mType == SetTarget, at /Users/apehrson/Dev/mozilla-central/dom/media/webaudio/AudioEventTimeline.h: → Assertion failure: mType == SetTarget, at mozilla-central/dom/media/webaudio/AudioEventTimeline.h:
Summary: Assertion failure: mType == SetTarget, at mozilla-central/dom/media/webaudio/AudioEventTimeline.h: → Assertion failure: mType == SetTarget, at dom/media/webaudio/AudioEventTimeline.h:

There is also change in format for Duration() from %g to %f, for consistency
with Time<double>().

Pushed by ktomlinson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3c31e92d5b1e log AudioTimelineEvent::TimeConstant() only for SetTarget r=padenot
Status: NEW → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
Target Milestone: --- → 140 Branch
QA Whiteboard: [qa-triage-done-c141/b140]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: