Bug 1965931 log AudioTimelineEvent::TimeConstant() only for SetTarget r=padenot

There is also a change in format for Duration() from %g to %f, for consistency
with Time<double>().

Differential Revision: https://phabricator.services.mozilla.com/D248998